added about text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site uses data from all overs</p>
     <img class="portrate" src="img/me.JPG">
     <p>created by {{name}}</p>
     </div>
