--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,8 +1,53 @@
+<header class="mdc-top-app-bar mdc-top-app-bar--fixed">
+      <div class="mdc-top-app-bar__row">
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+          <a href="#" class="demo-menu material-icons mdc-top-app-bar__navigation-icon">menu</a>
+          <span class="mdc-top-app-bar__title">Augmented Reality</span>
+        </section>
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
+          <a href="#" class="material-icons mdc-top-app-bar__action-item" aria-label="Search" alt="Search">search</a>
+        </section>
+      </div>
+      <div class="mdc-top-app-bar__row">
+        <section class="mdc-top-app-bar__section">
+          <div class="mdc-tab-bar" role="tablist">
+            <div class="mdc-tab-scroller mdc-tab-scroller--align-center">
+              <div class="mdc-tab-scroller__scroll-area">
+                <div class="mdc-tab-scroller__scroll-content">
+                  <button id="overview-tab" class="mdc-tab mdc-tab--min-width mdc-tab--active" role="tab"
+                    aria-selected="true" tabindex="0">
+                    <span class="mdc-tab__content">
+                      <span class="mdc-tab__text-label">Overview</span>
+                    </span>
+                    <span class="mdc-tab-indicator mdc-tab-indicator--active">
+                      <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
+                    </span>
+                    <span class="mdc-tab__ripple"></span>
+                  </button>
 
+                  <button id="accounts-tab" class="mdc-tab mdc-tab--min-width" role="tab" tabindex="0">
+                    <span class="mdc-tab__content">
+                      <span class="mdc-tab__text-label">DC Chargers</span>
+                    </span>
+                    <span class="mdc-tab-indicator">
+                      <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
+                    </span>
+                    <span class="mdc-tab__ripple"></span>
+                  </button>
 
-<header>
-    <h1>{{title}}</h1>
-    <a href = "/">Weather</a>
-    <a href = "/about">About</a>
-    <a href = "/help">Help</a>
-</header>
+                  <button id="budget-tab" class="mdc-tab mdc-tab--min-width" role="tab" tabindex="0">
+                    <span class="mdc-tab__content">
+                      <span class="mdc-tab__text-label">AC Chargers</span>
+                    </span>
+                    <span class="mdc-tab-indicator">
+                      <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
+                    </span>
+                    <span class="mdc-tab__ripple"></span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </header>
