--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -5,26 +5,207 @@
 <head>
     <title>Weather</title>
     <link rel="icon" href="/img/weather.png">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css" rel="stylesheet"> 
+    <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="/css/bundle.css">
+    
     
 </head>
 
-<body>
-    <div class = "main-content">
-        {{>header}}
-        <p>Use this site to get your weather</p>
-
-        <form>
-            <input placeholder="location">
-            <button>Search</button>
-        </form>
-        <p id= "message-1"></p>
-        <p id="message-2"></p>
+<body class="mdc-typography">
+  <aside class="mdc-drawer">
+    <div class="mdc-drawer__content">
+      <a href='' >
+        <img src='media/logo/elanga-logo.svg' alt='Elanga Logo'/>
+      </a>
+      <nav class="mdc-list">
+        <a class="mdc-list-item mdc-list-item--selected" href="/index.html" aria-selected="true" tabindex="0">
+          <i class="material-icons mdc-list-item__graphic" aria-hidden="true">place</i>
+          <span class="mdc-list-item__text">Augmented Reality</span>
+        </a>
+        <a class="mdc-list-item" href="/index-learn.html">
+          <i class="material-icons mdc-list-item__graphic" aria-hidden="true">book</i>
+          <span class="mdc-list-item__text">Learn</span>
+        </a>
+      </nav>
     </div>
+  </aside>
+
+  <div class="mdc-drawer-scrim"></div>
+  <div class="mdc-drawer-app-content">
+    <header class="mdc-top-app-bar mdc-top-app-bar--fixed">
+      <div class="mdc-top-app-bar__row">
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+          <a href="#" class="demo-menu material-icons mdc-top-app-bar__navigation-icon">menu</a>
+          <span class="mdc-top-app-bar__title">Augmented Reality</span>
+        </section>
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
+          <a href="#" class="material-icons mdc-top-app-bar__action-item" aria-label="Search" alt="Search">search</a>
+        </section>
+      </div>
+      <div class="mdc-top-app-bar__row">
+        <section class="mdc-top-app-bar__section">
+          <div class="mdc-tab-bar" role="tablist">
+            <div class="mdc-tab-scroller mdc-tab-scroller--align-center">
+              <div class="mdc-tab-scroller__scroll-area">
+                <div class="mdc-tab-scroller__scroll-content">
+                  <button id="overview-tab" class="mdc-tab mdc-tab--min-width mdc-tab--active" role="tab"
+                    aria-selected="true" tabindex="0">
+                    <span class="mdc-tab__content">
+                      <span class="mdc-tab__text-label">Overview</span>
+                    </span>
+                    <span class="mdc-tab-indicator mdc-tab-indicator--active">
+                      <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
+                    </span>
+                    <span class="mdc-tab__ripple"></span>
+                  </button>
+
+                  <button id="accounts-tab" class="mdc-tab mdc-tab--min-width" role="tab" tabindex="0">
+                    <span class="mdc-tab__content">
+                      <span class="mdc-tab__text-label">DC Chargers</span>
+                    </span>
+                    <span class="mdc-tab-indicator">
+                      <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
+                    </span>
+                    <span class="mdc-tab__ripple"></span>
+                  </button>
+
+                  <button id="budget-tab" class="mdc-tab mdc-tab--min-width" role="tab" tabindex="0">
+                    <span class="mdc-tab__content">
+                      <span class="mdc-tab__text-label">AC Chargers</span>
+                    </span>
+                    <span class="mdc-tab-indicator">
+                      <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
+                    </span>
+                    <span class="mdc-tab__ripple"></span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </header>
+
+    <main class="main-content">
+      <div class="mdc-top-app-bar--fixed-adjust">
+        <section id="overview-content" class="tab-content">
+          
+          <h6 class="mdc-typography--overline">How to use</h6>
+          <p class="mdc-typography--body2">
+            Select the preffered model and Enter AR-Mode.
+          </p>
+
+          <h6 class="mdc-typography--overline">Note</h6>
+          <p class="mdc-typography--body2">
+            Please use on a phone runnning chrome 81 or above.
+            Augmented reality relies on detecting surfaces.
+          </p>
+          <h6 class="mdc-typography--overline">Limit use of:</h6>
+          <p class="mdc-typography--body2">
+            Flat surfaces without texture, such as a white desk.
+            Environments with dim lighting.
+            Extremely bright environments.
+            Transparent or reflective surfaces like glass.
+            Dynamic or moving surfaces, such as blades of grass or ripples in water.</p>
+          </p>
+          <h6 class="mdc-typography--overline">Does my browser support WebXR?</h6>
+            <div>
+              <img id='canhazimg' style='width: 32px; float: left;'></img>
+              <p id='canhazwebxr' style='margin-left: 48px;'></p>
+              
+            </div>
+            <script>
+              function isMobile(global) {
+                let check = false;
+                (function(a){if(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino/i.test(a)||/1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0,4)))check = true})(global.navigator.userAgent||global.navigator.vendor||global.opera);
+                return check;
+              };
     
- 
-    {{>footer}}
-    <script src="/js/app.js"></script>
+              let canhazElement = document.getElementById('canhazwebxr');
+              let canhazImg = document.getElementById('canhazimg');
+              if ('xr' in navigator) {
+                canhazElement.innerText = "Yes! If you have the appropriate hardware."
+                canhazImg.src = "media/textures/check-button.png";
+              } else if ('getVRDisplays' in navigator) {
+                canhazElement.innerText = "Your browser does not support WebXR, but does support the deprecated WebVR API. You may be able to run Virtual Reality experiences on sites that use the WebXR Polyfill, like this one!"
+                canhazImg.src = "media/textures/info-button.png";
+              } else if (isMobile(window)) {
+                canhazElement.innerText = "Your browser does not support WebXR, but you appear to be using a mobile device. You may be able to run Virtual Reality experiences on sites that use the WebXR Polyfill, like this one!"
+                canhazImg.src = "media/textures/info-button.png";
+              } else {
+                canhazElement.innerText = "Sorry, your browser does not support WebXR."
+                canhazImg.src = "media/textures/x-button.png";
+              }
+            </script>
+
+        </section>
+        <section id="accounts-content" class="tab-content">
+          <h1 class="mdc-typography--headline6">
+            Augmented Reality
+          </h1>
+          <p>
+            View DC chargers below in Augmented reality.
+          </p>
+          <p>Power Range: 7kw - 350kw.</p>
+          <p>
+            To view all our products for sale goto 
+            <a href="https://elanga.tech/products">products</a>.
+          </p>
+          <div class="mdc-card my-card " style="width: auto;">
+            <div class="mdc-card__primary-action my-card__primary-action" tabindex="0">
+              <img id="temp" src="./media/thumbnails/tritium-temp.png" alt="Tritium Charger">
+              <div class="my-card__primary">
+                <h2 class="my-card__title mdc-typography mdc-typography--headline6">Tritium RT 50</h2>
+                <h3 class="my-card__subtitle mdc-typography mdc-typography--subtitle2">Tritium</h3>
+              </div>
+            </div>
+            <div class="mdc-card__actions">
+              <div class="mdc-card__action-buttons">
+                <a href="ar-dc.html"class="mdc-button mdc-card__action mdc-card__action--button">  <span class="mdc-button__ripple"></span> Enter</a>
+                <!-- <button class="mdc-button mdc-card__action mdc-card__action--button">  <span class="mdc-button__ripple"></span> Bookmark</button> -->
+              </div>
+              
+            </div>
+          </div>
+        </section>
+        <section id="budget-content" class="tab-content">
+          <h1 class="mdc-typography--headline6">
+            Augmented Reality
+          </h1>
+          <p>
+            View AC chargers below in Augmented reality.
+          </p>
+          <p>Power Range: 3.7kw - 22kw.</p>
+          <p>
+            To view all our products for sale goto 
+            <a href="https://elanga.tech/products">products</a>.
+          </p>
+          <div class="mdc-card my-card demo-ui-control">
+            <div class="mdc-card__primary-action my-card__primary-action" tabindex="0">
+              <img id="temp" src="./media/thumbnails/keba-temp.png" alt="Keba Charger">
+              <div class="my-card__primary">
+                <h2 class="my-card__title mdc-typography mdc-typography--headline6">Keba P30</h2>
+                <h3 class="my-card__subtitle mdc-typography mdc-typography--subtitle2">KEBA</h3>
+              </div>
+            </div>
+            <div class="mdc-card__actions">
+              <div class="mdc-card__action-buttons">
+                <a href="ar-ac.html"class="mdc-button mdc-card__action mdc-card__action--button">  <span class="mdc-button__ripple"></span> Enter</a>
+                <!-- <button class="mdc-button mdc-card__action mdc-card__action--button">  <span class="mdc-button__ripple"></span> Bookmark</button> -->
+              </div>
+              
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+  </div>
+
+  <!-- import the Material javascript file -->
+  <script src="js/bundle.js" async></script>
+  <script src="../dist/bundle.js" async></script>
 </body>
 
 
